# SlimeVR-Installer-Rewrite

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SlimeVRInstaller.sln  flake.nix  rust-toolchain.toml
SlimeVRInstaller/: Installer.cs  Program.cs  SlimeVRInstaller.csproj
SlimeVRInstaller/Installer/: ComponentState.cs  InstallFile.cs  Installer.cs  RegistryUtils.cs  SteamVRInstaller.cs
SlimeVRInstaller/Installer/Components/: InstallComponent.cs  InstallComponentType.cs
SlimeVRInstaller/Installer/Exceptions/: FailedToInstallException.cs  InstallException.cs
SlimeVRInstaller/Installer/Handlers/: ExeInstallHandler.cs  InstallHandler.cs  ZipInstallHandler.cs
SlimeVRInstaller/Installer/InstallHandlers/: ExeInstallHandler.cs  InstallHandler.cs  WebViewInstallHandler.cs  ZipInstallHandler.cs
SlimeVRInstaller/Network/: DownloadProgress.cs  DownloadUtils.cs
autoupdater/: Cargo.toml
autoupdater/src/: lib.rs  main.rs  platform.rs
autoupdater/src/component/: available.rs  incompatible.rs  installed.rs  maybe_cross_platform.rs  mod.rs  version.rs
autoupdater/src/parsing/: install_path.rs  mod.rs  procedures.rs
autoupdater/src/util/: mod.rs  selectable_hashmap.rs
gui/: Cargo.toml
gui/src/: loading.rs  main.rs  util.rs
