[package]
name = "autoupdater"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-enum-str = "0.3"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
derive_more = "0.99"
tempfile = "3"
futures = "0.3"
color-eyre = "0.6"
path-absolutize = "3"
semver = { version = "1.0.16", features = ["serde"] }
target-lexicon = { version = "0.12.13", features = ["serde_support"] }
chrono = { version = "0.4.33", features = ["serde"] }
pretty_env_logger = "0.5"
directories = "5.0"
formatx = "0.2.2"

log.workspace = true
