[package]
name = "gui"
version = "0.1.0"
license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true


[dependencies]
fltk = { version = "1.4", features = [
    # "fltk-bundled",
    "use-wayland",
    "use-ninja",
] }
env_logger = "0.11"

log.workspace = true
